--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Distributed Training",
             "type": "python",
             "request": "launch",
-            "program": "/home/mxy/anaconda3/envs/llama/lib/python3.9/site-packages/torch/distributed/launch.py",
+            "program": "/home/mxy/anaconda3/envs/llama/bin/torchrun",
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "-m",
-                "torch.distributed.launch",
                 "--nproc_per_node=1",
                 "example.py"
             ],
-            "env": {"CUDA_VISIBLE_DEVICES":"0"},
+            "env": {"CUDA_VISIBLE_DEVICES":"5,6,7"},
         }
     ]
 }
